--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,20 @@
  *= require_tree .
  *= require_self
  */
+// Graphical variables
+// @import "config/fonts";
+// @import "config/colors";
+// @import "config/bootstrap_variables";
+
+// External libraries
+@import "bootstrap/scss/bootstrap";
+
+
+.layout{
+  margin: 50px;
+}
+
+.navbar-default {
+  background: #f8f8f8;
+  padding-left: 30px;
+}
