--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            Events
+          </a>
+        </div>
+      </div>
+    </nav>
+    <div class="layout">
+      <%= yield %>
+    </div>
   </body>
 </html>
