Added Users UI and Controller. Added required indexes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,11 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href=<%= events_path%>>
+          <a class="navbar-brand" href=<%=events_path%>>
             Events
+          </a>
+          <a class="navbar-brand" href=<%=users_path%>>
+            Users
           </a>
         </div>
       </div>
