--- a/app/views/_date_form.html.erb
+++ b/app/views/_date_form.html.erb
@@ -6,13 +6,13 @@
   <div class="col-md-6">
     <%= form.label :start, "Start Time", class: 'form-label' %>
     <div class="input-group">
-      <%= form.datetime_select :starttime, {default: @starttime},  class: 'form-select' %>
+      <%= form.date_select :starttime, {default: @starttime},  class: 'form-select' %>
     </div>
   </div>
   <div class="col-md-6">
     <%= form.label :start, "End Time", class: 'form-label'  %>
     <div class="input-group">
-      <%= form.datetime_select :endtime, {default: @endtime},  class: 'form-select' %>
+      <%= form.date_select :endtime, {default: @endtime},  class: 'form-select' %>
     </div>
   </div>
 </div>
